@@ -2,9 +2,9 @@ RELEASE.txt - notes for creating a CMF release
 
   Most of the work necessary to create a CMF release is done by the script
   'slurp_release.py', which can always be found in the root of the CMF 
-  package on CVS-HEAD. The script will CVS export the CMF package, build the
-  tarballs, and upload them and the respective READMEs to the CMF area on
-  www.zope.org.
+  package on the Subversion trunk. The script will svn export the CMF 
+  package, build the tarballs, and upload them and the respective READMEs 
+  to the CMF area on www.zope.org.
 
   Before running 'slurp_release.py' the respective branch needs to be cleaned
   up and tagged properly. 
@@ -16,48 +16,50 @@ RELEASE.txt - notes for creating a CMF release
   **Naming conventions**
 
     In order to stay consistent the following naming conventions for CMF
-    versions and for CVS tags used to tag releases should be used,
+    versions and for Subversion tags used to tag releases should be used,
     demonstrated with the help of a notional 1.8.4 release:
 
-      - CMF beta versions are '1.8.4beta' and '1.8.4beta2' for the second
+      - CMF beta versions are '1.8.4-beta' and '1.8.4-beta2' for the second
         beta. The same is true for alpha releases if one is desired.
-        '1.8.4alpha2' follows '1.8.4alpha'. Alpha releases should only
+        '1.8.4-alpha2' follows '1.8.4-alpha'. Alpha releases should only
         be necessary for the first release off a new release branch. The final
         version would then be '1.8.4'
 
-      - CVS tags follow the convention 'CMF-1_8_4-release' or
-        'CMF-1_8_4-beta'. As with version numbers, 'CMF-1_8_4-beta2' would
-        indicate the second beta release.
+      - Subversion tags are the same as the version number. So our CMF 1.8.4
+        release would be tagged as '1.8.4'. '1.8.4-beta2' would indicate the 
+        second beta release.
 
-      - Branch tags in CVS look like 'CMF-1_8-branch' for the branch that
-        would yield e.g. version 1.8.4
+      - Branch tags in Subversion look like '1.8' for the branch that
+        would yield e.g. version 1.8.4. In essence, the branch tag only
+        contains the major release number.
 
 
   **Preparing the branch**
 
-    To release version '1.8.4beta2' off the 'CMF-1_8-branch' the following
-    steps are needed. It is assumed the release manager is using the HEAD
-    of the 'CMF-1_8-branch' to make these changes:
+    To release version '1.8.4-beta2' off the '1.8' branch the following
+    steps are needed. It is assumed the release manager is using the tip
+    of the '1.8' Subversion branch to make these changes:
 
       - At the top of 'CHANGES.txt', enter the current date as YYYY/MM/DD
         in parentheses next to the CMF version number.
 
       - Find all 'version.txt' files throughout the CMF package and adjust 
-        the version number, in this case 'CMF-1.8.4beta2'.
+        the version number, in this case 'CMF-1.8.4-beta2'.
 
-      - Check these changes into the CVS repository
+      - Check these changes into the Subversion repository
 
-      - Tag the sandbox, in this case with the tag 'CMF-1_8_4beta2'
+      - Create the Subversion tag by svn copying the head of the release
+        branch to the tag in the tags repository directory.
 
 
   **Creating and publishing the release**
 
-    Now that the CVS repository is prepared the files need to be put onto
+    Now that the Subversion repository is prepared the files need to be put onto
     zope.org. First of all, the Software Release object needs to be created.
     Go to http://www.zope.org/Products/CMF and create a Software Release 
     from the Folder Contents view:
 
-      - Name CMF-1.8.4beta2
+      - Name CMF-1.8.4-beta2
 
       - Version 1.8.4-beta2
 
@@ -65,13 +67,13 @@ RELEASE.txt - notes for creating a CMF release
 
       - License ZPL
 
-      - Info URL '/Products/CMF/CMF-1.8.4beta2/README.txt'
+      - Info URL '/Products/CMF/CMF-1.8.4-beta2/README.txt'
 
       - License URL '/Resources/License/ZPL-2.1'
 
-      - Changes URL '/Products/CMF/CMF-1.8.4beta2/CHANGES.txt'
+      - Changes URL '/Products/CMF/CMF-1.8.4-beta2/CHANGES.txt'
 
-      - Installation URL '/Products/CMF/CMF-1.8.4beta2/INSTALL.txt'
+      - Installation URL '/Products/CMF/CMF-1.8.4-beta2/INSTALL.txt'
 
     Make sure to publish this Software Release. Due to a problem with the 
     zope.org site at the time of this writing, you need to specify an
@@ -79,19 +81,19 @@ RELEASE.txt - notes for creating a CMF release
     the zope.org front page. Just choose the current data using the date
     picker widget.
 
-    With CVS and zope.org preparations done the 'slurp_release.py' script will 
-    do the remaining work. You run it with the CVS tag and version ID as 
-    parameters::
+    With Subversion and zope.org preparations done the 'slurp_release.py' 
+    script will do the remaining work. You run it with the Subversion tag 
+    and version ID as parameters::
 
       slurp_release.py [options] release_tag version_id
 
-    slurp_release can be run from anywhere, it does not depend on your CVS
-    sandbox because it will create its own. Without any options it will 
-    complete the whole procedure including upload to the zope.org site. 
+    slurp_release can be run from anywhere, it does not depend on your 
+    Subversion sandbox because it will create its own. Without any options 
+    it will complete the whole procedure including upload to the zope.org site. 
     Use 'slurp_release.py --help' to find out more. The release_tag is equal 
-    to the CVS tag in the repository (CMF-1_8_4beta2, to stick with our 
+    to the Subversion tag in the repository (1.8.4-beta2, to stick with our 
     example) whereas the version_id is the ID of the software release on 
-    zope.org (CMF-1.8.4beta2).
+    zope.org (CMF-1.8.4-beta2).
 
     Once 'slurp_release.py' has completed the upload step you need to visit
     the uploaded files on zope.org and make sure they get published on the 
